Fix user name cutoff on safari

--- a/src/components/PeopleList/PeopleList.module.scss
+++ b/src/components/PeopleList/PeopleList.module.scss
@@ -221,7 +221,7 @@
         color: var(--text-primary);
         font-size: 16px;
         font-weight: 700;
-        line-height: 16px;
+        line-height: 18px;
         max-width: 168px;
         text-overflow: ellipsis;
         white-space: nowrap;
@@ -231,7 +231,7 @@
       .verification {
         font-size: 15px;
         font-weight: 400;
-        line-height: 16px;
+        line-height: 18px;
         color: var(--text-tertiary-2);
         max-width: 168px;
         text-overflow: ellipsis;
