--- a/src/components/Search/SearchOption.module.scss
+++ b/src/components/Search/SearchOption.module.scss
@@ -41,7 +41,7 @@
   .userName {
     font-weight: 700;
     font-size: 15px;
-    line-height: 16px;
+    line-height: 18px;
     color: var(--text-primary);
     overflow: hidden;
     text-overflow: ellipsis;
@@ -56,7 +56,7 @@
   .verification {
     font-weight: 400;
     font-size: 12px;
-    line-height: 12px;
+    line-height: 14px;
     color: var(--text-tertiary);
     overflow: hidden;
     text-overflow: ellipsis;
