--- a/src/pages/Profile.module.scss
+++ b/src/pages/Profile.module.scss
@@ -267,7 +267,7 @@
         display: flex;
         align-items: center;
         vertical-align: baseline;
-        height: 20px;
+        height: 22px;
       }
 
       .followsBadge {
